--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,11 @@
     "author": "Christopher Besch",
     "license": "MIT",
     "devDependencies": {
+        "css-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.3.2",
         "raw-loader": "^4.0.2",
+        "react-dev-utils": "^11.0.0",
+        "style-loader": "^3.2.1",
         "ts-loader": "^9.2.5",
         "typescript": "^4.4.2",
         "webpack": "^5.52.0",
