--- a/.github/workflows/check_manim_version.yml
+++ b/.github/workflows/check_manim_version.yml
@@ -2,7 +2,8 @@
 name: Check Latest Manim CE Version
 on:
   schedule:
-    - cron:  '0 10 * * *'
+    - cron: '0 10 * * *'
+  workflow_dispatch:
 jobs:
   get-version:
     runs-on: ubuntu-latest
