--- a/.github/workflows/check_manim_version.yml
+++ b/.github/workflows/check_manim_version.yml
@@ -8,15 +8,21 @@ jobs:
   get-version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+            submodules: recursive
+
       - name: Fetch release version
         run: |
           # save version from json in file
           curl -sL https://api.github.com/repos/ManimCommunity/manim/releases/latest | \
           jq -r ".tag_name" > release_versions/manim_ce_latest.txt
+
       - name: Check for modified files
         id: git-check
         run: echo ::set-output name=modified::$([ -z "`git status --porcelain`" ] && echo "false" || echo "true")
+
       - name: Commit latest release version
         if: steps.git-check.outputs.modified == 'true'
         run: |
