--- a/.github/workflows/check_manim_version.yml
+++ b/.github/workflows/check_manim_version.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Commit latest release version
         if: steps.git-check.outputs.modified == 'true'
         run: |
-          git config --global user.name 'Christopher Besch'
-          git config --global user.email 'christopher.besch@gmx.de'
+          git config --global user.name 'Manim CE Version Checker'
+          git config --global user.email 'main.version.checker@users.noreply.github.com'
           git commit -am "New Manim CE release version"
           git push
