--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Update environment
         run: |
-          sudo apt install libcairo2-dev libpango1.0-dev ffmpeg python3-pip nodejs npm
+          sudo apt install libcairo2-dev libpango1.0-dev ffmpeg python3-pip nodejs npm texlive-full
           pip3 install -r requirements.txt
           cd ${{github.workspace}}/web
           npm install
